Fix baseline vertical alignment in main content

--- a/src/components/baseline.scss
+++ b/src/components/baseline.scss
@@ -15,6 +15,7 @@
 
 .cui__baseline__content--main {
     margin: 0 4rem;
+    padding: .2rem 0 0 0;
 
     @include respond-to-wide {
         width: 102rem;
